_includes/css/header.css
.header {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    
    /*position: relative;*/
}

.header--hero {
    height: 85vh;
    margin-top: 120px;
    z-index: 0;
}

.header--simple h1 {
    margin-top: 280px;
    margin-bottom: 80px;
}

/* ==========================================================================
   Navbar
   ========================================================================== */
.header__nav-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 120px;
    background-color: #ffffff;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1;
    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.1);
}

.nav__logo {
    display: flex;
    align-items: center;
    margin-left: 30px;
}

.nav__logo-img {
    width: 140px;
}

.nav__logo-name {
    white-space: nowrap;
    margin-left: 10px;
    font-family: "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
    font-weight: 600;
    font-size: 32px;
    font-stretch: normal;
}

.nav__menu {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-right: 20px;
}

.nav__menu-item {
    font-family: "HelveticaNeue", "Helvetica Neue", "HelveticaNeueRoman", "HelveticaNeue-Roman", "Helvetica Neue Roman", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
    margin-right: 20px;
    white-space: nowrap;
}

.nav__menu-item:hover {
    text-decoration: none;
    color: #4f4f4f;
}

.nav__menu-item--active {
    color: #46877E;
}

.nav__menu-item--active:hover {
    color: #6CA099;
}

.menu-toggle {
    width: 20px;
    margin-right: 20px;
    padding:; 10px;
    cursor: pointer;
    display: none;
}

/* ==========================================================================
   Hero Image
   ========================================================================== */

.header__image {
    height: 100%;
    width: 100%;

    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;

    display: flex;
    align-items: flex-end;
}

.header__image--left {
    justify-content: flex-start;
}

.header__image--center {
    justify-content: center;
}

.header__image--home {
    background-image: url("/assets/hero-front.jpg");
}

.header__image--ortho {
    background-image: url("/assets/leisten.jpg");
}

.header__image--sani {
    background-image: url("/assets/bandage.jpg");
}

.header__image--firma {
    background-image: url("/assets/ladenfront.jpg");
}

.header__image--regio {
    background-image: url("/assets/landschaft.jpg");
}

.header__image--orthese {
    background-image: url("/assets/orthese.jpg");
}

.header__text {
    margin-bottom: 80px; 
    margin-left: 40px;
    margin-right: 40px;
    text-align: center;
}

.header__text--left {
    /*margin-left: 40px;*/
    text-align: left;
}

.header__text h1, .header__text p {
    color: #fff;
    margin-bottom: 40px;
    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
}

.header__text p {
    font-family: "HelveticaNeue", "Helvetica Neue", "HelveticaNeueRoman", "HelveticaNeue-Roman", "Helvetica Neue Roman", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
    font-size: 36px;
    line-height: 40px;
    margin-left: 0;
}

.header__text h1 {
    margin-left: 0;
    margin-bottom: 10px;
}

/* ==========================================================================
   Simple Header
   ========================================================================== */



@media only screen and (max-width: 1280px), (min-device-width: 768px) and (max-device-width: 1024px){

    .nav__menu {
        flex-direction: column;
        align-items: center;
        justify-content: flex-end;
        margin-top: 40px;
        margin-right: 0;
    }

    .nav__menu-item {
        margin-bottom: 10px;
        margin-right: 0;
    }

    .header__nav-bar {
        display: block;
        height: 120px;
    }

    .nav__logo {
        margin-top: 30px;
        max-width: 400px; /* workaround, to be fixed */
    }

    .menu-toggle {
        position: absolute;
        top: 45px;
        right: 20px;
        display: block;
    }

    .nav__menu {
        display: none;
    }

    .active {
        display: flex;
    }

    .menu-open {
        height: 320px;
    }
}

@media only screen and (max-width: 1024px), (min-device-width: 768px) and (max-device-width: 1024px){
    .nav__logo {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-left: 30px;
    margin-top: 20px;
    max-width: 160px; /* workaround, to be fixed */
    }   

    .nav__logo-img {
        width: 140px;
        margin-left: 15px;
    }

    .nav__logo-name {
        white-space: nowrap;
        font-family: "HelveticaNeueBold", "HelveticaNeue-Bold", "Helvetica Neue Bold", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosBold', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
        font-weight: 600;
        font-size: 18px;
        font-stretch: normal;
    }

    .menu-toggle {
        top: 45px;
    }

    .header__image {
    height: 100%;
    }

    .header--hero {
    height: 75vh;
    }

    .header__text {
        margin-bottom: 40px;
    }

    .header__text p {
        font-size: 24px;
        line-height: 28px;
    }

    .header__text h1 {
        font-size: 32px;
        line-height: 36px;
        margin: 40px 0 40px 0;
        text-align: left;
    }

    .header__text a {
        margin-bottom: 10px;
    }
}

